Fix broken markdown

--- a/_layouts/theindex.html
+++ b/_layouts/theindex.html
@@ -22,8 +22,7 @@ layout: all
     <div class="row">
         <div class="col-sm-12 text-center">
             <h2 class="title">What is Deeplearning4j?</h2>
-            <p>Deeplearning4j is the first commercial-grade, open-source, distributed deep-learning library written for Java and Scala. Integrated with Hadoop and <a href="./spark">Spark</a>, DL4J is designed to be used in business environments on distributed <a href="./gpu">GPUs</a> and CPUs. <a href="http://skymind.io">Skymind</a> is its commercial support arm. 
-            <br>O'Reilly's book about Deeplearning4j is [available on Amazon](https://www.amazon.com/Deep-Learning-Practitioners-Adam-Gibson/dp/1491914254/).</p>
+            <p>Deeplearning4j is the first commercial-grade, open-source, distributed deep-learning library written for Java and Scala. Integrated with Hadoop and <a href="./spark">Spark</a>, DL4J is designed to be used in business environments on distributed <a href="./gpu">GPUs</a> and CPUs. <a href="http://skymind.io">Skymind</a> is its commercial support arm. O'Reilly's book about Deeplearning4j is [available on Amazon](https://www.amazon.com/Deep-Learning-Practitioners-Adam-Gibson/dp/1491914254)</p>
             <!-- Github buttons -->
             <p style="margin-top: 40px;">
               <!-- Place this tag where you want the button to render. -->
