--- a/_layouts/all.html
+++ b/_layouts/all.html
@@ -29,6 +29,7 @@
               <li><a href='./spark'>Spark</a></li>
               <li><a href='./word2vec'>Word2Vec</a></li>
               <li><a href='./about'>About</a></li>
+              <li><a href='https://www.amazon.com/Deep-Learning-Practitioners-Adam-Gibson/dp/1491914254' target='_blank'>Textbook</a></li>
               <li><a href='https://github.com/deeplearning4j/deeplearning4j' target='_blank'>Github</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
