Nav icons complete
Former-commit-id: 1b2dd37f04dee828db29667f89f3c8dbe362991b [formerly 30be812370666a8e61a9d827d52989faf657e779]
Former-commit-id: d1d4d55361404b3a4b2fc004ab4da79327b4b726

--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/Training.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/Training.scala.html
@@ -11,17 +11,21 @@
             <div class="navDiv">
                 <div class="navTopSpacer"></div>
                 <div class="navElement">
-                    <img src="assets/img/train/nav_icon_home_32.png">
+                    <img src="assets/img/train/nav_icon_home_28.png">
                         @i18n.getMessage("train.nav.overview")
                 </div>
                 <div class="navElement">
-                    <img src="assets/img/train/nav_icon_model_32.png">
+                    <img src="assets/img/train/nav_icon_model_28.png">
                     @i18n.getMessage("train.nav.model")
                 </div>
                 <div class="navElement">
+                    <img src="assets/img/train/nav_icon_system_28.png">
                 @i18n.getMessage("train.nav.hwsw")
                 </div>
-                <div class="navElement">@i18n.getMessage("train.nav.help")</div>
+                <div class="navElement">
+                    <img src="assets/img/train/nav_icon_help_28.png">
+                    @i18n.getMessage("train.nav.help")
+                </div>
             </div>
             <div class="contentDiv">
                 Content Div<br>
