--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/Training.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/Training.scala.html
@@ -9,22 +9,39 @@
         <div class="outerDiv">
 
             <div class="navDiv">
-                <div class="navTopSpacer"></div>
+                <div class="navTopSpacer">(TODO: Session Selection Here)</div>
                 <div class="navElement">
+                    <div class="navHorizontalSpacer"></div>
                     <img src="assets/img/train/nav_icon_home_28.png">
-                        @i18n.getMessage("train.nav.overview")
+                    <div class="navHorizontalSpacer"></div>
+                    @i18n.getMessage("train.nav.overview")
                 </div>
+                <div class="navElementSpacer"></div>
                 <div class="navElement">
+                    <div class="navHorizontalSpacer"></div>
                     <img src="assets/img/train/nav_icon_model_28.png">
+                    <div class="navHorizontalSpacer"></div>
                     @i18n.getMessage("train.nav.model")
                 </div>
+                <div class="navElementSpacer"></div>
                 <div class="navElement">
+                    <div class="navHorizontalSpacer"></div>
                     <img src="assets/img/train/nav_icon_system_28.png">
-                @i18n.getMessage("train.nav.hwsw")
+                    <div class="navHorizontalSpacer"></div>
+                    @i18n.getMessage("train.nav.hwsw")
                 </div>
+                <div class="navElementSpacer"></div>
                 <div class="navElement">
+                    <div class="navHorizontalSpacer"></div>
                     <img src="assets/img/train/nav_icon_help_28.png">
+                    <div class="navHorizontalSpacer"></div>
                     @i18n.getMessage("train.nav.help")
+                </div>
+                <div class="navBottom">
+                    (TODO Language Selection Here)
+                    <div class="navElementSpacer"></div>
+                    <a href="http://www.deeplearning4j.org/" class="textlink">deeplearning4j.org</a>
+                    <div class="navElementSpacer"></div>
                 </div>
             </div>
             <div class="contentDiv">
