--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/resources/deeplearning4jUiAssets/css/train.css
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/resources/deeplearning4jUiAssets/css/train.css
@@ -6,10 +6,27 @@ body {
     height: 100%;
     background-color: #ffffff;
 }
+.topBarDiv {
+    width: 100%;
+    height:45px;
+    background-color: black;
+    color: #f6f6f6;
+}
+.topBarDivContent {
+    height: 45px;
+    float: left;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14pt;
+    display: flex;
+    align-items: center;
+}
 .navDiv {
     width: 210px;
     height: 100%;
     background-color: #37373C;
+    /*position: absolute;*/
+    /*left: 0;*/
+    float: left;
 }
 .navTopSpacer {
     width: 100%;
@@ -75,7 +92,10 @@ body {
     text-decoration: none;
 }
 .contentDiv {
-    width: auto;
-    height: 100%;
+    /*width: 100%;*/
+    float: left;
+    width: calc(100% - 210px);
+    height: calc(100% - 45px);
     background-color: #f6f6f6;
+    /*margin-left: 210px;     !* 210 pixels = width of nav bar *!*/
 }
