--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingOverview.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingOverview.scala.html
@@ -1,4 +1,12 @@
 @(i18n: org.deeplearning4j.ui.api.I18N)
-<div>
-    Overview page content here!
+<div class="overviewOuterDiv">
+    <div class="overviewScoreChartDiv">
+        Score chart here
+    </div>
+    <div class="overviewTableDiv">
+        Performance Info Here
+    </div>
+    <div class="overviewTableDiv">
+        Model Information Here
+    </div>
 </div>
