--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/resources/deeplearning4jUiAssets/css/train.css
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/resources/deeplearning4jUiAssets/css/train.css
@@ -1,5 +1,7 @@
+/*@import "co";*/
 body {
     margin: 0;
+    overflow: hidden;
 }
 .outerDiv {
     width: 100%;
@@ -28,9 +30,15 @@ body {
     /*left: 0;*/
     float: left;
 }
+.navSessionID {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 11pt;
+    color: #f6f6f6;
+    padding-left: 10px;
+}
 .navTopSpacer {
     width: 100%;
-    height:100px;
+    height: 30px;
     color: #64646E;
 }
 .navElementSpacer {
@@ -78,7 +86,7 @@ body {
     position: absolute;
     bottom: 5px;
     text-align: center;
-    color: #64646E;
+    color: #787882;
 }
 .textlink {
     display: block;
@@ -87,19 +95,18 @@ body {
     font-size: 11pt;
 }
 .textlink:link {
-    color: #64646E;
+    color: #787882;
     text-decoration: none;
 }
 .textlink:visited {
-    color: #64646E;
+    color: #787882;
     text-decoration: none;
 }
 .languageSelect {
     /*background: transparent;*/
     background-color: #37373C;
-    color: #64646E;
-    /*border-color: #4B4B55;*/
-    border-color: #64646E;
+    color: #787882;
+    border-color: #787882;
 }
 .contentDiv {
     /*width: 100%;*/
@@ -107,5 +114,44 @@ body {
     width: calc(100% - 210px);
     height: calc(100% - 45px);
     background-color: #f6f6f6;
-    /*margin-left: 210px;     !* 210 pixels = width of nav bar *!*/
+    overflow: auto;
+    /*flex-wrap: wrap;*/
+    /*flex-grow: 1;*/
+    display: flex;
+}
+
+
+/* ----- Specific to Overview page ----- */
+.overviewOuterDiv {
+    width: 100%;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+
+    -webkit-flex-flow: row wrap;
+    justify-content: flex-start;
+}
+
+.overviewScoreChartDiv {
+    /*float: left;*/
+    width: 60%;
+    height: 400px;
+    min-width: 500px;
+    max-width: 700px;
+    /*background-color: #4cae4c;  !* Temp *!*/
+    /*flex-wrap: wrap;*/
+    flex-grow: 2;
+}
+
+.overviewTableDiv {
+    /*float: left;*/
+    width: 20%;
+    min-width: 220px;
+    max-width: 350px;
+    height: 400px;
+    /*background-color: #5bc0de;  !* Temp *!*/
+    /*flex-wrap: wrap;*/
+    flex-grow: 1;
 }
