More layout and routing implementation; blocking out of model page
Former-commit-id: c9c2fd95e4bba1116e2335052bb7e304d2be3554

--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/Training.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/Training.scala.html
@@ -11,7 +11,7 @@
     </head>
     <script>
         function onPageLoad(){
-            onNavClick('home', '@i18n.getMessage("train.nav.errormsg")');
+            onNavClick('overview', '@i18n.getMessage("train.nav.errormsg")');
             setLanguageSelectorValue();
             setInterval(getAndProcessUpdate,2000);
         }
@@ -31,7 +31,7 @@
                     TODO<br>
                 </div>
                 <div class="navTopSpacer"></div>
-                <div class="navElement" id="homeNavDiv" onclick="onNavClick('home', '@i18n.getMessage("train.nav.errormsg")')">
+                <div class="navElement" id="homeNavDiv" onclick="onNavClick('overview', '@i18n.getMessage("train.nav.errormsg")')">
                     <div class="navHorizontalSpacer"></div>
                     <img src="assets/img/train/nav_icon_home_28.png">
                     <div class="navHorizontalSpacer"></div>
