--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/resources/deeplearning4jUiAssets/css/train.css
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/resources/deeplearning4jUiAssets/css/train.css
@@ -1,4 +1,3 @@
-/*@import "co";*/
 body {
     margin: 0;
     overflow: hidden;
@@ -136,22 +135,46 @@ body {
 
 .overviewScoreChartDiv {
     /*float: left;*/
-    width: 60%;
+    width: 70%;
     height: 400px;
     min-width: 500px;
     max-width: 700px;
-    /*background-color: #4cae4c;  !* Temp *!*/
-    /*flex-wrap: wrap;*/
+    background-color: #8c8c8c;  /* Temp, for dev/debugging */
     flex-grow: 2;
 }
 
 .overviewTableDiv {
     /*float: left;*/
-    width: 20%;
+    width: 30%;
     min-width: 220px;
     max-width: 350px;
     height: 400px;
-    /*background-color: #5bc0de;  !* Temp *!*/
-    /*flex-wrap: wrap;*/
+    background-color: #9d9d9d;  /* Temp, for dev/debugging */
     flex-grow: 1;
+}
+
+.overviewTable {
+    border: 1px solid black;
+}
+
+/* ----- Specific to Model page ----- */
+.modelOuterDiv {
+    width: 100%;
+
+}
+.modelGraphDiv {
+    width:40%;
+    height: 100%;
+    min-width:200px;
+    max-width: 400px;
+    background-color: #9acfea;  /** Temp for layout debugging */
+    float: left;
+}
+.modelContentDiv {
+    width: 30%;
+    height: 300px;
+    min-width:300px;
+    max-width: 600px;
+    background-color: #2e6da4; /** Temp for layout debugging */
+    float: left;
 }
