Backend for layer info JSON done
Former-commit-id: b7a6203f8f3c4fc49873b354c64ad51b3dcc0da2

--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/resources/deeplearning4jUiAssets/css/train.css
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/resources/deeplearning4jUiAssets/css/train.css
@@ -160,7 +160,6 @@ body {
 /* ----- Specific to Model page ----- */
 .modelOuterDiv {
     width: 100%;
-
 }
 .modelGraphDiv {
     width:40%;
@@ -172,6 +171,19 @@ body {
 }
 .modelContentDiv {
     width: 30%;
+    height: 300px;
+    min-width:300px;
+    max-width: 600px;
+    background-color: #2e6da4; /** Temp for layout debugging */
+    float: left;
+}
+
+/* ----- Specific to System page ----- */
+.systemOuterDiv {
+    width: 100%;
+}
+.systemContentDiv {
+    width: 25%;
     height: 300px;
     min-width:300px;
     max-width: 600px;
