--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingHelp.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingHelp.scala.html
@@ -1,4 +1,8 @@
 @(i18n: org.deeplearning4j.ui.api.I18N)
 <div>
-    Help/User Guide page content here!
+    <p>Help/User Guide page content here</p>
+    <p>
+        Idea: explain the basics to users - enough to understand what they are looking at and get started.
+        Then direct them to the relevant resources on the website.
+    </p>
 </div>
