Mean magnitudes and activations data
Former-commit-id: f44afe680448bcf5a9db58436a4b6b578490caf3 [formerly c3fe9ef9dad46a2d770776f976c2e3bbdfa22a82]
Former-commit-id: 2126a2e313b5160e99bae1efaa1621a0e5db1dfe

--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/resources/deeplearning4jUiAssets/css/train.css
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/resources/deeplearning4jUiAssets/css/train.css
@@ -174,7 +174,7 @@ body {
     height: 300px;
     min-width:300px;
     max-width: 600px;
-    background-color: #2e6da4; /** Temp for layout debugging */
+    background-color: #e0e0e0; /** Temp for layout debugging */
     float: left;
 }
 
@@ -187,6 +187,6 @@ body {
     height: 300px;
     min-width:300px;
     max-width: 600px;
-    background-color: #2e6da4; /** Temp for layout debugging */
+    background-color: #9acfea; /** Temp for layout debugging */
     float: left;
 }
