Add parameters and updates histogram data to model page json
Former-commit-id: a3e2cc598ba3f6465eec034c2a3a50cfd67792e3 [formerly c9c7ba5d9ce8201fa63d8dc11121e0fd86bab233]
Former-commit-id: 34b3d93b580926ed89b6eeb44fd12de19399018f

--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingModel.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingModel.scala.html
@@ -46,9 +46,18 @@
     <div class="modelContentDiv" id="modelParamHistogram">
         <p>Parameters histogram</p>
         <p>Histogram of the parameters in the network</p>
+        <p>
+            /train/model/data/layerId -> "paramHist"
+            "paramNames": names of parameters
+            one key for each param name: min,max,bins,counts fields. This defines the histogram content.
+            i.e., each histogram has "bins" entries of size (max-min)/bins.
+        </p>
     </div>
     <div class="modelContentDiv" id="modelParamHistogram">
         <p>Updates histogram</p>
         <p>Histogram of the updates in the network</p>
+        <p>
+            As per params histograms, but "updateHist"
+        </p>
     </div>
 </div>
