json data for system page - hardware and software info
Former-commit-id: 3fa6e6af4d80e1910a3b9e160fd0113f36e61d48

--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingSystem.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingSystem.scala.html
@@ -1,18 +1,32 @@
 @(i18n: org.deeplearning4j.ui.api.I18N)
 <div class="systemOuterDiv">
     <div class="systemContentDiv" id="systemMemoryUtilization">
-        <p>Memory utilization chart (0 to 100%, last N minutes?) goes here</p>
+        <p>Memory utilization multi-chart (0 to 100%, last N minutes?) goes here</p>
         <p>Note that in general for this page: will be showing stats/info from MULTIPLE systems</p>
         <p>Single machine training will have 1; Spark etc. training will have one row like this for each machine/JVM</p>
+
+        Source: /train/system/data -> "memory"
+        "nEntries": integer, for number of memory info charts we have
+
+        For each of the n entries: "0", "1", ..., "n-1" with values:
+            "seriesNames": names of the series
+            "isDevice": for each series, whether it is a device memory (second chart) or standard (1st chart)
+            "times": timestamps for the entries (millisecond epoch format)
+            "values": the actual memory utilization fraction over time, values 0.0 to 1.0
+            "currentBytes": the currently utilized memory, for each series (at most recent time step)
+            "maxBytes": the maximum available bytes, for each series (at most recent time step)
     </div>
     <div class="systemContentDiv" id="systemDeviceMemory">
         <p>Memory utilization for GPUs (0 to 100%, last N minutes?) goes here</p>
         <p>For machines without any GPUs/devices, we shouldn't show this div/chart</p>
+        Source: same as memory above, but with isDevice[i] = true
     </div>
     <div class="systemContentDiv" id="systemHardwareInfo">
         <p>Hardware information table for this machine/JVM</p>
+        Source: /train/system/data -> "hardware"
     </div>
     <div class="systemContentDiv" id="systemHardwareInfo">
         <p>Software information table for this machine/JVM</p>
+        Source: /train/system/data -> "software"
     </div>
 </div>
