Fix CSS class application on nav clicks

--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/Training.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/Training.scala.html
@@ -31,7 +31,7 @@
                     TODO<br>
                 </div>
                 <div class="navTopSpacer"></div>
-                <div class="navElement" id="homeNavDiv" onclick="onNavClick('overview', '@i18n.getMessage("train.nav.errormsg")')">
+                <div class="navElement" id="overviewNavDiv" onclick="onNavClick('overview', '@i18n.getMessage("train.nav.errormsg")')">
                     <div class="navHorizontalSpacer"></div>
                     <img src="assets/img/train/nav_icon_home_28.png">
                     <div class="navHorizontalSpacer"></div>
