Handle session selection; session info, list sessions, display in UI, etc

--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/Training.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/Training.scala.html
@@ -12,6 +12,7 @@
     <script>
         function onPageLoad(){
             onNavClick('overview', '@i18n.getMessage("train.nav.errormsg")');
+            setSessionIDDivContents();
             setLanguageSelectorValue();
             setInterval(getAndProcessUpdate,2000);
         }
@@ -28,7 +29,9 @@
                 <div class="navTopSpacer"></div>
                 <div class="navSessionID">
                     <strong>@i18n.getMessage("train.nav.sessionid"):</strong><br>
-                    TODO<br>
+                </div>
+                <div class="navSessionID" id="navSessionIDValue">
+                    -
                 </div>
                 <div class="navTopSpacer"></div>
                 <div class="navElement" id="overviewNavDiv" onclick="onNavClick('overview', '@i18n.getMessage("train.nav.errormsg")')">
