Second pass on flow listener; fully working with play UI
Former-commit-id: 6f85bb234ba5e535a80dbda6aa15e06ee320aa20

--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/flow/Flow.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/flow/Flow.scala.html
@@ -159,7 +159,7 @@
                         <option value="0" selected="selected">Pick a session to track</option>
                     </select>&nbsp;&nbsp;
                         <script>
-                            buildSessionSelector("FLOW");
+                            buildSessionSelector2("flow/listSessions","");
                         </script>
                     </td>
                     <td style="width: 256px;" class="hd-small">&nbsp;Updated at: <b><span id="updatetime">No updates so far</span></b>&nbsp;</td>
