--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingOverview.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingOverview.scala.html
@@ -220,9 +220,9 @@
                     });
             </script>
 
-            <!-- Execute periodically -->
+            <!-- Execute periodically (every 2 sec) -->
             <script>
-
+                    setTimeout(renderScoreChart,2000);
             </script>
             <!-- End JavaScript-->
 
